Change fsimx6sx/ul_defconfig to support Silex WLAN
The WLAN driver for Silex SXSDPAC is built out-of-tree as an external kernel
module. However this external build process also creates an own sxcfg80211.ko
module which is a replacement for the builtin cfg80211.ko. Therefore we need
to configure CONFIG_CFG80211 as module. Also activating CONFIG_NL80211_TESTMODE
and CONFIG_CFG80211_WEXT is necessary. To have access point support, also add
CONFIG_HOSTAP.

We do not support the Taiyo Yuden WYSBCVGXA anymore that was available on
earlier board revisions of efusA9X and efusA7UL. Therefore we can remove
CONFIG_MWIFIEX.

On fsimx6sx we can also remove CONFIG_MAC80211. At the moment we do not have
a WLAN chip there that depends on the generic wireless stack. On fsimx6ul
however we need to support the Jorjin WG7801 WLAN chip for the Cube2.0 which
is based on WL18xx, so here we still need CONFIG_MAC80211.

--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -53,8 +53,9 @@ CONFIG_VLAN_8021Q=y
 CONFIG_LLC2=y
 CONFIG_CAN=y
 CONFIG_CAN_FLEXCAN=y
-CONFIG_CFG80211=y
-CONFIG_MAC80211=y
+CONFIG_CFG80211=m
+CONFIG_NL80211_TESTMODE=y
+CONFIG_CFG80211_WEXT=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_STANDALONE is not set
@@ -119,7 +120,7 @@ CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
 CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
-# CONFIG_RTL_CARDS is not set
+CONFIG_HOSTAP=y
 CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_INPUT_POLLDEV=y
@@ -318,7 +319,6 @@ CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_LRW=y
 CONFIG_CRYPTO_XTS=y
-CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD128=y
 CONFIG_CRYPTO_RMD160=y
 CONFIG_CRYPTO_RMD256=y
