Add option to anable/disable GPU on PicoCOMA9X
Some CPU variants used on PicoCOMA9X do not have a GPU built in. Add
CONFIG_PICOCOMA9X_GPU to enable/disable GPU.

Reduce size of comment for a similar GPU configuration in cont1.dts.

--- a/arch/arm/boot/dts/cont1.dts
+++ b/arch/arm/boot/dts/cont1.dts
@@ -388,9 +388,7 @@
 	status = "okay";
 };
 
-/* CONT1 CPU doesnt support 2D&3D GPU, thats why we have to disable gpu,
- * otherwise the CPU hangs up because the driver cant access the register
- */
+/* This board uses CPU variant MCIMX6X2EVN10 which does not have a GPU */
 &gpu {
 	status = "disabled";
 };
