--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -1303,6 +1303,7 @@ lvds_wvga {				\
 	pinctrl-0 = <&pinctrl_ecspi5>;
 	fsl,spi-num-chipselects = <2>;
 	cs-gpios = <&gpio4 28 0>, <&gpio4 18 0>;
+	status = "okay";
 
 	spidev@0 {
 		#address-cells = <1>;
