Add analog video output to fsimx6, using BT656+ADV7391
Add support for analog video output to all boards of the fsimx6 family that
have RGB-LCD output, i.e. efusA9, armStoneA9, NetDCUA9 and PicoCOMA9. Using
this feature requires an externally connected video encoder of the type
ADV7391. It is accessed via the low 8 data bits of the LCD port. It uses
BT656 protocol. In addition a I2C connection is required to set the registers
of the ADV7391.

Device tree modifications:

- Add option to use BT656 output as additional option to LCD, LVDS0/1, HDMI
- Add default settings for BT656
- Add bt656 and adv7391 device nodes
- Add IOMUXC settings for BT656
- Disable some LCD settings if BT656 is used

Modifications in fsimx6_defconfig:

- Add CONFIG_FB_MXC_BT656 to allow BT656 support
- Add CONFIG_VIDEO_ADV739X to have support for ADV7391

--- a/arch/arm/boot/dts/armstonea9q.dts
+++ b/arch/arm/boot/dts/armstonea9q.dts
@@ -16,6 +16,7 @@
 #define DISPLAY_HDMI	2	/* DVI/HDMI via HDMI connector */
 #define DISPLAY_LVDS0	3	/* LVDS channel 0 */
 #define DISPLAY_LVDS1	4	/* LVDS channel 1 */
+#define DISPLAY_BT656	5	/* BT656 via ADV739x */
 
 /*
  * Set the display configuration:
@@ -62,6 +63,14 @@
 #define CONFIG_ARMSTONEA9_LCD_BPP	32
 #define CONFIG_ARMSTONEA9_LCD_PIX_FMT	"RGB666"
 #define CONFIG_ARMSTONEA9_LCD_MODE_STR	"LCD-ET070080"
+
+/*
+ * Configure BT656 settings here (ignored if BT656 is not used);
+ * see drivers/video/fbdev/mxc/mxc_bt656.c for possible mode strings
+ */
+#define CONFIG_ARMSTONEA9_BT656_BPP	32
+#define CONFIG_ARMSTONEA9_BT656_PIX_FMT	"BT656"
+#define CONFIG_ARMSTONEA9_BT656_MODE_STR	"BT656-PAL"
 
 /* Configure HDMI settings here (ignored if HDMI is not used) */
 #define CONFIG_ARMSTONEA9_HDMI_BPP	32
