--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -17,13 +17,17 @@
 #undef CONFIG_EFUSA9_MXCFB2
 #undef CONFIG_EFUSA9_MXCFB3
 
-#if ((CONFIG_EFUSA9_MXCFB0 == DISPLAY_LCD) && (CONFIG_EFUSA9_MXCFB1 == DISPLAY_LVDS0))
+#if (((CONFIG_EFUSA9_MXCFB0 == DISPLAY_LCD) \
+      || (CONFIG_EFUSA9_MXCFB0 == DISPLAY_BT656)) \
+     && (CONFIG_EFUSA9_MXCFB1 == DISPLAY_LVDS0))
 #undef CONFIG_EFUSA9_MXCFB1
 #define CONFIG_EFUSA9_MXCFB1		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #endif
 
-#if ((CONFIG_EFUSA9_MXCFB0 == DISPLAY_LVDS0) && (CONFIG_EFUSA9_MXCFB1 == DISPLAY_LCD))
+#if ((CONFIG_EFUSA9_MXCFB0 == DISPLAY_LVDS0) \
+     && ((CONFIG_EFUSA9_MXCFB1 == DISPLAY_LCD) \
+         || (CONFIG_EFUSA9_MXCFB1 == DISPLAY_BT656)))
 #undef CONFIG_EFUSA9_MXCFB0
 #define CONFIG_EFUSA9_MXCFB0		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
@@ -59,6 +63,22 @@
 #else
 #define __LCD_ON_0_OR_1__	0
 #define __LCD_ON_2_OR_3__	1
+#endif
+#endif
+
+/* Do we have BT656? */
+#if ((CONFIG_EFUSA9_MXCFB0 == DISPLAY_BT656) \
+    || (CONFIG_EFUSA9_MXCFB1 == DISPLAY_BT656) \
+    || (CONFIG_EFUSA9_MXCFB2 == DISPLAY_BT656) \
+    || (CONFIG_EFUSA9_MXCFB3 == DISPLAY_BT656))
+#define CONFIG_EFUSA9_BT656
+#if ((CONFIG_EFUSA9_MXCFB0 == DISPLAY_BT656) \
+    || (CONFIG_EFUSA9_MXCFB1 == DISPLAY_BT656))
+#define __BT656_ON_0_OR_1__	1
+#define __BT656_ON_2_OR_3__	0
+#else
+#define __BT656_ON_0_OR_1__	0
+#define __BT656_ON_2_OR_3__	1
 #endif
 #endif
 
@@ -327,6 +347,13 @@
 		interface_pix_fmt = CONFIG_EFUSA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_EFUSA9_LCD_MODE_STR;
+#elif (CONFIG_EFUSA9_MXCFB0 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_EFUSA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_EFUSA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_EFUSA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_EFUSA9_MXCFB0 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_EFUSA9_HDMI_BPP>;
@@ -357,6 +384,13 @@
 		interface_pix_fmt = CONFIG_EFUSA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_EFUSA9_LCD_MODE_STR;
+#elif (CONFIG_EFUSA9_MXCFB1 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_EFUSA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_EFUSA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_EFUSA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_EFUSA9_MXCFB1 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_EFUSA9_HDMI_BPP>;
@@ -387,6 +421,13 @@
 		interface_pix_fmt = CONFIG_EFUSA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_EFUSA9_LCD_MODE_STR;
+#elif (CONFIG_EFUSA9_MXCFB2 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_EFUSA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_EFUSA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_EFUSA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_EFUSA9_MXCFB2 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_EFUSA9_HDMI_BPP>;
@@ -417,6 +458,13 @@
 		interface_pix_fmt = CONFIG_EFUSA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_EFUSA9_LCD_MODE_STR;
+#elif (CONFIG_EFUSA9_MXCFB3 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_EFUSA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_EFUSA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_EFUSA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_EFUSA9_MXCFB3 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_EFUSA9_HDMI_BPP>;
@@ -438,6 +486,7 @@
 #endif
 	};
 
+#ifdef CONFIG_EFUSA9_LCD
 	lcd: lcd@0 {
 		compatible = "fsl,lcd";
 		lcd-supply = <&reg_vlcd>;
@@ -445,6 +494,17 @@
 		pinctrl-0 = <&pinctrl_ipu1_ctrl &pinctrl_ipu1_dat>;
 		status = "disabled";
 	};
+#endif
+
+#ifdef CONFIG_EFUSA9_BT656
+	bt656: bt656@0 {
+		compatible = "fsl,bt656";
+		default_ifmt = "BT656";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_ipu1_bt656>;
+		status = "disabled";
+	};
+#endif
 
 	/* RGB-LCD backlight PWM on RGB adapter */
 	backlight_lcd {
@@ -776,6 +836,17 @@
 		};
 	};
 
+#ifdef CONFIG_EFUSA9_BT656
+	adv739x@2b {
+		compatible = "adv739x";
+		reg = <0x2b>;
+		pinctrl-names = "default", "enable";
+		default_ifmt = "BT656";	//###???
+		ipu_id = <0>;		//###???
+		disp_id = <0>;		//###???
+	};
+#endif
+
 #ifdef CONFIG_EFUSA9_4WTOUCH_SX8655_ONBOARD
 	/* 4/5 wire analog resistive touch, controller on efus SKIT */
 	sx8654@48 {
@@ -1063,6 +1134,16 @@
 };
 #endif
 
+#ifdef CONFIG_EFUSA9_BT656
+&bt656 {
+	/* BT656 on efusA9 is always on IPU1 (id=0), DI0 */
+	ipu_id = <0>;
+	disp_id = <0>;
+	default_ifmt = CONFIG_EFUSA9_BT656_PIX_FMT;
+	status = "okay";
+};
+#endif
+
 #ifdef CONFIG_EFUSA9_HDMI
 &hdmi_core {
 #ifdef CONFIG_EFUSA9_USE_ONE_IPU
@@ -1085,8 +1166,8 @@
 	 * versa, then HDMI has to go to IPU2 (id=1), otherwise to IPU1 (id=0).
 	 */
 	disp_id = <1>;
-#if ((__HDMI_ON_0_OR_1__ && __LCD_ON_0_OR_1__) \
-    || (__HDMI_ON_2_OR_3__ && __LCD_ON_2_OR_3__))
+#if ((__HDMI_ON_0_OR_1__ && (__LCD_ON_0_OR_1__ || __BT656_ON_0_OR_1__)) \
+    || (__HDMI_ON_2_OR_3__ && (__LCD_ON_2_OR_3__ || __BT656_ON_2_OR_3__)))
 	ipu_id = <1>;
 #else
 	ipu_id = <0>;
@@ -1221,10 +1302,11 @@
 		};
 #endif
 
+#ifdef CONFIG_EFUSA9_LCD
 		/* LCD interface */
 		pinctrl_ipu1_ctrl: ipu1grp-1 {
 			fsl,pins = <
-				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x00010
+				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x10
 				MX6QDL_PAD_DI0_PIN2__IPU1_DI0_PIN02	0x00010
 				MX6QDL_PAD_DI0_PIN3__IPU1_DI0_PIN03	0x00010
 				MX6QDL_PAD_DI0_PIN15__IPU1_DI0_PIN15	0x00010
@@ -1254,6 +1336,23 @@
 				MX6QDL_PAD_DISP0_DAT17__IPU1_DISP0_DATA17  0x10
 			>;
 		};
+#endif
+
+#ifdef CONFIG_EFUSA9_BT656
+		pinctrl_ipu1_bt656: ipu1grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x10
+				MX6QDL_PAD_DISP0_DAT0__IPU1_DISP0_DATA00   0x10
+				MX6QDL_PAD_DISP0_DAT1__IPU1_DISP0_DATA01   0x10
+				MX6QDL_PAD_DISP0_DAT2__IPU1_DISP0_DATA02   0x10
+				MX6QDL_PAD_DISP0_DAT3__IPU1_DISP0_DATA03   0x10
+				MX6QDL_PAD_DISP0_DAT4__IPU1_DISP0_DATA04   0x10
+				MX6QDL_PAD_DISP0_DAT5__IPU1_DISP0_DATA05   0x10
+				MX6QDL_PAD_DISP0_DAT6__IPU1_DISP0_DATA06   0x10
+				MX6QDL_PAD_DISP0_DAT7__IPU1_DISP0_DATA07   0x10
+			>;
+		};
+#endif
 
 #ifdef CONFIG_EFUSA9_PARALLEL_CAMERA
 		pinctrl_ipu1_2: ipu1grp-cam { /* parallel camera */
