--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -19,15 +19,17 @@
 #undef CONFIG_PICOMODA9_MXCFB2
 #undef CONFIG_PICOMODA9_MXCFB3
 
-#if ((CONFIG_PICOMODA9_MXCFB0 == DISPLAY_LCD) \
-	&& (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_LVDS0))
+#if (((CONFIG_PICOMODA9_MXCFB0 == DISPLAY_LCD) \
+      || (CONFIG_PICOMODA9_MXCFB0 == DISPLAY_BT656)) \
+     && (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_LVDS0))
 #undef CONFIG_PICOMODA9_MXCFB1
 #define CONFIG_PICOMODA9_MXCFB1		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
 #endif
 
 #if ((CONFIG_PICOMODA9_MXCFB0 == DISPLAY_LVDS0) \
-	&& (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_LCD))
+     && ((CONFIG_PICOMODA9_MXCFB1 == DISPLAY_LCD) \
+         || (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_BT656)))
 #undef CONFIG_PICOMODA9_MXCFB0
 #define CONFIG_PICOMODA9_MXCFB0		DISPLAY_LVDS1
 #define __MOVE_LVDS0_TO_LVDS1_DUAL_MODE__
@@ -63,6 +65,22 @@
 #else
 #define __LCD_ON_0_OR_1__	0
 #define __LCD_ON_2_OR_3__	1
+#endif
+#endif
+
+/* Do we have BT656? */
+#if ((CONFIG_PICOMODA9_MXCFB0 == DISPLAY_BT656) \
+    || (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_BT656) \
+    || (CONFIG_PICOMODA9_MXCFB2 == DISPLAY_BT656) \
+    || (CONFIG_PICOMODA9_MXCFB3 == DISPLAY_BT656))
+#define CONFIG_PICOMODA9_BT656
+#if ((CONFIG_PICOMODA9_MXCFB0 == DISPLAY_BT656) \
+    || (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_BT656))
+#define __BT656_ON_0_OR_1__	1
+#define __BT656_ON_2_OR_3__	0
+#else
+#define __BT656_ON_0_OR_1__	0
+#define __BT656_ON_2_OR_3__	1
 #endif
 #endif
 
@@ -421,6 +439,13 @@
 		interface_pix_fmt = CONFIG_PICOMODA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_PICOMODA9_LCD_MODE_STR;
+#elif (CONFIG_PICOMODA9_MXCFB0 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_PICOMODA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_PICOMODA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_PICOMODA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_PICOMODA9_MXCFB0 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_PICOMODA9_HDMI_BPP>;
@@ -451,6 +476,13 @@
 		interface_pix_fmt = CONFIG_PICOMODA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_PICOMODA9_LCD_MODE_STR;
+#elif (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_PICOMODA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_PICOMODA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_PICOMODA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_PICOMODA9_MXCFB1 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_PICOMODA9_HDMI_BPP>;
@@ -481,6 +513,13 @@
 		interface_pix_fmt = CONFIG_PICOMODA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_PICOMODA9_LCD_MODE_STR;
+#elif (CONFIG_PICOMODA9_MXCFB2 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_PICOMODA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_PICOMODA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_PICOMODA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_PICOMODA9_MXCFB2 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_PICOMODA9_HDMI_BPP>;
@@ -511,6 +550,13 @@
 		interface_pix_fmt = CONFIG_PICOMODA9_LCD_PIX_FMT;
 		int_clk = <1>;
 		mode_str = CONFIG_PICOMODA9_LCD_MODE_STR;
+#elif (CONFIG_PICOMODA9_MXCFB3 == DISPLAY_BT656)
+		disp_dev = "bt656";
+		default_bpp = <CONFIG_PICOMODA9_BT656_BPP>;
+		interface_pix_fmt = CONFIG_PICOMODA9_BT656_PIX_FMT;
+		int_clk = <0>;
+		mode_str = CONFIG_PICOMODA9_BT656_MODE_STR;
+		clock-frequency = <27000000>;
 #elif (CONFIG_PICOMODA9_MXCFB3 == DISPLAY_HDMI)
 		disp_dev = "hdmi";
 		default_bpp = <CONFIG_PICOMODA9_HDMI_BPP>;
@@ -532,6 +578,7 @@
 #endif
 	};
 
+#ifdef CONFIG_PICOMODA9_LCD
 	lcd: lcd@0 {
 		compatible = "fsl,lcd";
 		lcd-supply = <&reg_vlcd>;
@@ -539,6 +586,17 @@
 		pinctrl-0 = <&pinctrl_ipu1_ctrl &pinctrl_ipu1_dat>;
 		status = "disabled";
 	};
+#endif
+
+#ifdef CONFIG_PICOMODA9_BT656
+	bt656: bt656@0 {
+		compatible = "fsl,bt656";
+		default_ifmt = "BT656";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_ipu1_bt656>;
+		status = "disabled";
+	};
+#endif
 
 	/* LDB/LCD backlight PWM (PWM3) */
 	ldb_lcd_backlight {
@@ -780,6 +838,17 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c3_3>;
 	status = "okay";
+
+#ifdef CONFIG_PICOMODA9_BT656
+	adv739x@2b {
+		compatible = "adv739x";
+		reg = <0x2b>;
+		pinctrl-names = "default", "enable";
+		default_ifmt = "BT656";	//###???
+		ipu_id = <0>;		//###???
+		disp_id = <0>;		//###???
+	};
+#endif
 
 #ifdef CONFIG_PICOMODA9_CAPTOUCH_FT5x06
 	/* F&S driver V3.0 on Touch Connector (I2C) */
@@ -1025,6 +1094,16 @@
 };
 #endif
 
+#ifdef CONFIG_PICOMODA9_BT656
+&bt656 {
+	/* BT656 on efusA9 is always on IPU1 (id=0), DI0 */
+	ipu_id = <0>;
+	disp_id = <0>;
+	default_ifmt = CONFIG_PICOMODA9_BT656_PIX_FMT;
+	status = "okay";
+};
+#endif
+
 #ifdef CONFIG_PICOMODA9_HDMI
 &hdmi_core {
 #ifdef CONFIG_PICOMODA9_USE_ONE_IPU
@@ -1047,8 +1126,8 @@
 	 * versa, then HDMI has to go to IPU2 (id=1), otherwise to IPU1 (id=0).
 	 */
 	disp_id = <1>;
-#if ((__HDMI_ON_0_OR_1__ && __LCD_ON_0_OR_1__) \
-    || (__HDMI_ON_2_OR_3__ && __LCD_ON_2_OR_3__))
+#if ((__HDMI_ON_0_OR_1__ && (__LCD_ON_0_OR_1__ || __BT656_ON_0_OR_1__)) \
+    || (__HDMI_ON_2_OR_3__ && (__LCD_ON_2_OR_3__ || __BT656_ON_2_OR_3__)))
 	ipu_id = <1>;
 #else
 	ipu_id = <0>;
@@ -1228,6 +1307,7 @@
 #endif
 		};
 
+#ifdef CONFIG_PICOMODA9_LCD
 		/* LCD interface */
 		pinctrl_ipu1_ctrl: ipu1grp-1 {
 			fsl,pins = <
@@ -1261,6 +1341,23 @@
 				MX6QDL_PAD_DISP0_DAT17__IPU1_DISP0_DATA17  0x10
 			>;
 		};
+#endif
+
+#ifdef CONFIG_PICOMODA9_BT656
+		pinctrl_ipu1_bt656: ipu1grp-3 {
+			fsl,pins = <
+				MX6QDL_PAD_DI0_DISP_CLK__IPU1_DI0_DISP_CLK 0x10
+				MX6QDL_PAD_DISP0_DAT0__IPU1_DISP0_DATA00   0x10
+				MX6QDL_PAD_DISP0_DAT1__IPU1_DISP0_DATA01   0x10
+				MX6QDL_PAD_DISP0_DAT2__IPU1_DISP0_DATA02   0x10
+				MX6QDL_PAD_DISP0_DAT3__IPU1_DISP0_DATA03   0x10
+				MX6QDL_PAD_DISP0_DAT4__IPU1_DISP0_DATA04   0x10
+				MX6QDL_PAD_DISP0_DAT5__IPU1_DISP0_DATA05   0x10
+				MX6QDL_PAD_DISP0_DAT6__IPU1_DISP0_DATA06   0x10
+				MX6QDL_PAD_DISP0_DAT7__IPU1_DISP0_DATA07   0x10
+			>;
+		};
+#endif
 
 #ifdef CONFIG_PICOMODA9_PARALLEL_CAMERA
 		/* Parallel camera */
