--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -204,12 +204,15 @@ CONFIG_VIDEO_MXC_PXP_V4L2=y
 CONFIG_VIDEO_MXC_CSI_CAMERA=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CODA=y
+# CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
+CONFIG_VIDEO_ADV739X=y
 CONFIG_DRM=y
 CONFIG_DRM_VIVANTE=y
 CONFIG_FB=y
 # CONFIG_FB_MX3 is not set
 CONFIG_FB_MXS=y
 CONFIG_FB_MXC_SYNC_PANEL=y
+CONFIG_FB_MXC_BT656=y
 CONFIG_FB_MXC_LDB=y
 CONFIG_FB_MXC_HDMI=y
 CONFIG_FB_MXC_DCIC=m
