Improve adv739x driver to allow setting chip type
Use compatible strings to tell the driver if a ADV7391 or ADV7393 is
connected. This automatically triggers using the right init values. It
is not necessary to modify the soucre code to change the chip type.

Change compatibility string in fsimx6 device trees and remove unused
entries.

--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -838,12 +838,8 @@
 
 #ifdef CONFIG_EFUSA9_BT656
 	adv739x@2b {
-		compatible = "adv739x";
+		compatible = "adi,adv7391";
 		reg = <0x2b>;
-		pinctrl-names = "default", "enable";
-		default_ifmt = "BT656";	//###???
-		ipu_id = <0>;		//###???
-		disp_id = <0>;		//###???
 	};
 #endif
 
