--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -675,14 +675,10 @@
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
 
-#ifdef CONFIG_NETDCUA9_BT656	
+#ifdef CONFIG_NETDCUA9_BT656
 	adv739x@2b {
-		compatible = "adv739x";
+		compatible = "adi,adv7391";
 		reg = <0x2b>;
-		pinctrl-names = "default", "enable";
-		default_ifmt = "BT656";	//###???
-		ipu_id = <0>;		//###???
-		disp_id = <0>;		//###???
 	};
 #endif
 
