--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -841,12 +841,8 @@
 
 #ifdef CONFIG_PICOMODA9_BT656
 	adv739x@2b {
-		compatible = "adv739x";
+		compatible = "adi,adv7391";
 		reg = <0x2b>;
-		pinctrl-names = "default", "enable";
-		default_ifmt = "BT656";	//###???
-		ipu_id = <0>;		//###???
-		disp_id = <0>;		//###???
 	};
 #endif
 
