On i.MX6, add support for 4-channel camera input ISL79985/79987
The Intersil ISL7998X series of chips support four camera input channels
over MIPI CSI, where each channel can select between two camera inputs,
which makes up for a total of eight cameras. They can capture in PAL and
NTSC.

ISL79985: Captures top field and bottom field as separate frames, i.e.
          720x288 @ 50 Hz (PAL) and 720x240 @ 60Hz (NTSC)
ISL79987: Captures full frames consisting of interleaved top field and
          bottom field, i.e. 720x576 @ 25Hz (PAL) and 720x480 @ 30Hz (NTSC)

The original patch series can be found on the NXP community:

  https://community.nxp.com/docs/DOC-158531

--- a/drivers/media/platform/mxc/capture/Makefile
+++ b/drivers/media/platform/mxc/capture/Makefile
@@ -21,4 +21,7 @@ obj-$(CONFIG_MXC_CAMERA_OV5640_MIPI) += ov5640_camera_mipi_int.o
 adv7180_tvin-objs := adv7180.o
 obj-$(CONFIG_MXC_TVIN_ADV7180) += adv7180_tvin.o
 
+isl7998x_tvin_mipi-objs := isl7998x_mipi.o
+obj-$(CONFIG_MXC_TVIN_ISL7998X_MIPI) += isl7998x_tvin_mipi.o
+
 obj-$(CONFIG_VIDEO_V4L2_MXC_INT_DEVICE) += v4l2-int-device.o
